# DLMSSPODEScommunication_prj

./: .gitignore  README.md  pyproject.toml
src/DLMS_SPODES_communications/: Network.py  __init__.py  base.py  ble.py  network.py  serial_port.py
test/: functools2.py  test_BLE.py  test_Network.py  test_Serial.py
