[build-system]
requires = [
    "setuptools",
    "setuptools-scm"]
#build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "DLMS_SPODES_communications"
version = "1.4.9"
authors = [
    {name="Serj Kotilevski", email="youserj@outlook.com"}
]
dependencies = [
    "bleak==0.22.2",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6"
]
description="dlms-spodes"
readme = "README.md"
requires-python = ">=3.12"
keywords=["dlms", "drivers"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Source = "https://github.com/youserj/DLMSSPODEScommunication_prj"

[project.scripts]
DLMS_SPODES_drivers = "DLMS_SPODES_communications:call_script"